# pavevision-pgpdn-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_web_demo.bat  run_web_demo.sh
configs/: pgpdn_default.yaml
examples/: plot_synthetic_quality_map.py  run_inference_template.py
pgpdn/: __init__.py  constants.py  features.py  model.py  visualization.py
sample_data/: synthetic_grid_features.csv
supplementary/: Data_and_Model_Release_Statement.md  Supplementary_Methods.md
web_demo/: app.py
web_demo/data/: route_display.json
web_demo/data/sample/: manifest.json  route1_2024.assessment.json  route1_2024.grid_0.5.json  route1_2025.assessment.json  route1_2025.grid_0.5.json  route1_2026.assessment.json  route1_2026.grid_0.5.json  route1_2026_predicted.assessment.json  route1_2026_predicted.grid_0.5.json  route2_2024.assessment.json  route2_2024.grid_0.5.json  route2_2025.assessment.json  route2_2025.grid_0.5.json  route2_2026.assessment.json  route2_2026.grid_0.5.json  route2_2026_predicted.assessment.json  route2_2026_predicted.grid_0.5.json  route3_2024.assessment.json  route3_2024.grid_0.5.json  route3_2025.assessment.json  route3_2025.grid_0.5.json  route3_2026.assessment.json  route3_2026.grid_0.5.json  route3_2026_predicted.assessment.json  route3_2026_predicted.grid_0.5.json
web_demo/static/: index.html
