[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pavevision-pgpdn-demo"
version = "0.1.0"
description = "Public demonstration code for PG-PDN pavement degradation prediction."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "pyyaml>=6.0",
    "torch>=1.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pgpdn*"]

